# Avatar_Talk

./: .gitignore  README.md  audio_translator.py  fairseq_translator.py  fast_audio_translator.py  fix_model.py  install_fast.py  pyproject.toml  quick_test.py  requirements.txt  test_websocket.py
chrome-extension/: background.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.css  popup.html  popup.js
src/avatar_translator/: __init__.py  asr.py  cli.py  core.py  mt.py  tts.py  web_server.py
