[project]
name = "avatar-translator"
version = "0.1.0"
description = "A local FOSS pipeline for English to Spanish audio translation"
authors = [
    {name = "Avatar Translator Team", email = "team@avatar-translator.dev"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["audio", "translation", "asr", "tts", "whisper", "spanish"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "faster-whisper>=0.10.0",
    "argostranslate>=1.9.0",
    "gtts>=2.4.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
avatar-translator = "avatar_translator.cli:main"
translate-audio = "avatar_translator.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/avatar-translator"
Repository = "https://github.com/your-username/avatar-translator"
Documentation = "https://github.com/your-username/avatar-translator#readme"
Issues = "https://github.com/your-username/avatar-translator/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avatar_translator"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
