# pyproject.toml — place this at the repository root (next to `src/`)

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "avatar-translator"
version = "0.1.0"
description = "English → Spanish audio translator (Whisper → Marian/Argos → gTTS) with Chrome extension."
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"

# Runtime dependencies used by your code in src/avatar_translator/*
dependencies = [
  # Web server
  "flask",
  "flask-cors",
  "flask-socketio>=5,<6",
  "eventlet",

  # ASR
  "faster-whisper",
  "ctranslate2",

  # MT (MarianMT requires torch + sentencepiece)
  "transformers>=4.40",
  "sentencepiece",
  "sacremoses",
  "torch",  # CPU wheel is fine on Python 3.11 (Windows)

  # Fallback MT
  "argostranslate",

  # TTS
  "gTTS",
]

[project.scripts]
avatar-translator = "avatar_translator.cli:main"
avatar-translator-server = "avatar_translator.web_server:main"

# Tell the build system where your package lives (src/ layout)
[tool.hatch.build.targets.wheel]
packages = ["src/avatar_translator"]

[tool.hatch.build.targets.sdist]
include = [
  "src/avatar_translator",
  "README.md",
]
